# serializer version: 1
# name: TestLoginView.test_empty_login_hint
  '''
  <main class="s-main" id="main" role="main">
      <section class="s-section pt-lg-3">
          <div class="container">
              <div class="row g-0 bg-white">
                  <div class="col-12 col-lg-6 bg-lg-white">
                      <div class="bg-white p-3 py-lg-7 px-lg-8">
                          <div class="container container-messages">
                          </div>
                          <h1 class="h2">
                              Connexion
                          </h1>
                          <form class="js-prevent-multiple-submit" method="post">
                              <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                              <fieldset>
                                  <div class="row">
                                      <div class="col-12">
                                          <div class="mb-3 form-group-required">
                                              <label class="form-label" for="id_email">
                                                  Adresse e-mail
                                              </label>
                                              <input autocomplete="email" class="form-control" id="id_email" maxlength="320" name="email" placeholder="nom@domaine.fr" required="" type="email"/>
                                          </div>
                                          <div class="c-info">
                                              <span class="c-info__summary">
                                                  Seul l'adresse e-mail est nécessaire pour voue connecter sur cet environnement.
                                              </span>
                                              <div class="c-info__detail">
                                                  <p>
                                                      Si vous choisissez un Prénom et un Nom, ces informations seront sauvegardées et utilisées pour les prochaines connexion avec cette adresse e-mail.
                                                  </p>
                                                  <p>
                                                      Si vous laissez les champs vide, les Prénoms et Noms ceux sauvegardés précédemment, ou des valeurs aléatoire si c'est la première connexion avec cette adresse-email.
                                                  </p>
                                              </div>
                                          </div>
                                          <div class="mb-3">
                                              <label class="form-label" for="id_first_name">
                                                  Prénom
                                              </label>
                                              <input class="form-control" id="id_first_name" name="first_name" placeholder="Prénom" type="text"/>
                                          </div>
                                          <div class="mb-3">
                                              <label class="form-label" for="id_last_name">
                                                  Nom
                                              </label>
                                              <input class="form-control" id="id_last_name" name="last_name" placeholder="Nom" type="text"/>
                                          </div>
                                      </div>
                                  </div>
                              </fieldset>
                              <div>
                                  <button class="btn btn-block btn-primary" type="submit">
                                      Connexion
                                  </button>
                              </div>
                          </form>
                      </div>
                  </div>
                  <div class="d-none d-lg-flex col-lg-6 p-lg-6 justify-content-center align-items-center bg-light">
                      <img alt="" class="img-fluid" loading="lazy" src="/static/img/illustration-ic.svg"/>
                  </div>
              </div>
          </div>
      </section>
  </main>
  
  '''
# ---
# name: TestLoginView.test_login_hint
  '''
  <main class="s-main" id="main" role="main">
      <section class="s-section pt-lg-3">
          <div class="container">
              <div class="row g-0 bg-white">
                  <div class="col-12 col-lg-6 bg-lg-white">
                      <div class="bg-white p-3 py-lg-7 px-lg-8">
                          <div class="container container-messages">
                          </div>
                          <h1 class="h2">
                              Connexion
                          </h1>
                          <form class="js-prevent-multiple-submit" method="post">
                              <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                              <fieldset>
                                  <div class="row">
                                      <div class="col-12">
                                          <div class="mb-3 form-group-required">
                                              <label class="form-label" for="id_email">
                                                  Adresse e-mail
                                              </label>
                                              <input autocomplete="email" class="form-control" disabled="" id="id_email" maxlength="320" name="email" placeholder="nom@domaine.fr" required="" type="email" value="me@mailinator.com"/>
                                          </div>
                                          <div class="c-info">
                                              <span class="c-info__summary">
                                                  Seul l'adresse e-mail est nécessaire pour voue connecter sur cet environnement.
                                              </span>
                                              <div class="c-info__detail">
                                                  <p>
                                                      Si vous choisissez un Prénom et un Nom, ces informations seront sauvegardées et utilisées pour les prochaines connexion avec cette adresse e-mail.
                                                  </p>
                                                  <p>
                                                      Si vous laissez les champs vide, les Prénoms et Noms ceux sauvegardés précédemment, ou des valeurs aléatoire si c'est la première connexion avec cette adresse-email.
                                                  </p>
                                              </div>
                                          </div>
                                          <div class="mb-3">
                                              <label class="form-label" for="id_first_name">
                                                  Prénom
                                              </label>
                                              <input class="form-control" id="id_first_name" name="first_name" placeholder="Prénom" type="text"/>
                                          </div>
                                          <div class="mb-3">
                                              <label class="form-label" for="id_last_name">
                                                  Nom
                                              </label>
                                              <input class="form-control" id="id_last_name" name="last_name" placeholder="Nom" type="text"/>
                                          </div>
                                      </div>
                                  </div>
                              </fieldset>
                              <div>
                                  <button class="btn btn-block btn-primary" type="submit">
                                      Connexion
                                  </button>
                              </div>
                          </form>
                      </div>
                  </div>
                  <div class="d-none d-lg-flex col-lg-6 p-lg-6 justify-content-center align-items-center bg-light">
                      <img alt="" class="img-fluid" loading="lazy" src="/static/img/illustration-ic.svg"/>
                  </div>
              </div>
          </div>
      </section>
  </main>
  
  '''
# ---
